pks-nsxt/samples-https/coffee.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-coffee
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: coffee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
spec:
  selector:
    matchLabels:
      app: coffee
  replicas: 2
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: harbor.corp.tanzu/library/http-echo
        args:
        - "-text=Keep quite and Enjoy your Coffee"
        ports:
        - containerPort: 5678
