pks-nsxt/samples-https/cafeingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress-https
  annotations:
    kubernetes.io/ingress.class: "nsx"
    #kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.allow-http: "false"
    ingress.kubernetes.io/rewrite-target: /
    #ncp/ssl-mode: "passthrough" 
    #ncp/ssl-mode: "reencrypt" 
    ncp/ssl-mode: "offload" 
spec:
  #-------------------Start HTTPS section ---------#
  tls:
  - hosts:
    - cafe.example.com
    secretName: cafe-example-secret # <----- This is the secret been created in previous step
  #-------------------End HTTPS section ---------#
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: svc-tea
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: svc-coffee
          servicePort: 80
